--- a/frontend-vite/src/pages/ProfilePage.css
+++ b/frontend-vite/src/pages/ProfilePage.css
@@ -50,7 +50,7 @@
 .profile-cover {
   width: 100%;
   height: 150px;
-  background-color: #ddd;
+  background-color: #000;
   position: relative;
 }
 .profile-cover .settings-btn,
